# gpu-byteplane-scan-experiments

./: .gitignore  H100_H200_runner_alignment_plan.md  M03-initial-guide.md  README.md  exp0_hbm_bw.csv  run_exp0.sh  run_exp1.sh  run_exp1_baseline.sh
benchmarks/experiment0/: CMakeLists.txt  README.md  bench_hbm_bw.cu
benchmarks/experiment1/: CMakeLists.txt  README.md  bench_byteplane_scan.cu  bench_contiguous_baseline.cu  exp1_kernels_byte.cuh  exp1_kernels_plane16.cuh  exp1_kernels_rowpack.cuh  exp1_kernels_shared.cuh  exp1_scan_common.cuh
buff_encoder/: buff_codec.cpp  buff_codec.hpp  buff_error_study.cpp  buff_tool.cpp  synth_datasets.c
exp2_analysis/results/: kstar_absolute.csv  metrics.csv
handoff/: 2026-04-10_Exp1_Instruction_Optimization_DevLog_Addendum.md  2026-04-10_Project_Spec_and_Log.md  2026-04-11_Exp1_Analysis_Plotting_TODO.md  2026-04-11_Exp1_ByteOnly_Refactor_Progress_and_Requirements.md  2026-04-11_Exp1_Kernel_Rewrite_Notes.md  2026-04-15_Byte Baseline vs ILP4 實驗報告.md
research/: 2026-04-15_exp1_byteplane_baseline_and_packed_reads_notes.md  2026-04-16_exp1_rowpack_benchmark_ncu_report.md
results/exp1/: contiguous_baseline.csv  ncu_exp1_linesrc_20260410_172704.ncu-rep  ncu_exp1_linesrc_20260410_172704_bench.csv  ncu_exp1_quick_20260410_162606.ncu-rep  ncu_exp1_quick_20260410_162606_bench.csv  ncu_exp1_view_20260410_204124.ncu-rep  ncu_exp1_view_20260410_204124_bench.csv  ncu_exp1_view_20260411_221304.ncu-rep  (+1 more)
scripts/: plot_exp0_results.py  plot_exp1_results.py  run_exp0.sh  run_exp1.sh  run_exp1_baseline.sh
spec/: 2026-04-10_H100-H200_混合環境對齊計畫.md  2026-04-10_Instruction-Level_Optimization_for_Progressive_Byte-Plane_Scan_Kernel.md  2026-04-11_專注於Byte Kernel Only  2026-04-12_新增exp1 baseline.md  2026-04-14_Exp3_Progressive_Aggregation.md  2026-04-15_Exp1_Byte_Kernel_ILP_Optimization_Spec.md  2026-04-15_Exp1_Rowpack_Strategy_and_Kernel_Organization_Spec.md  2026-04-16_Exp3_Progressive_Aggregation_Rowpack16_Implementation_Spec.md
(+110 files in other folders)
